# other

./: .gitignore  README.md
CheatSheets/: apt.sh  byedpi.sh  nginx.sh  x86_64-pc-windows-gnu.sh  x86_64-pc-windows-gnu.txt
SerialNumbers/: SerialNumbers.sln
SerialNumbers/SerialNumbers/: SerialNumbers.cpp  SerialNumbers.vcxproj  SerialNumbers.vcxproj.filters
mail-spam/: Cargo.toml
mail-spam/src/: args.rs  main.rs
so_utils/: Cargo.toml  build-windows.sh
so_utils/src/: main.rs
so_utils/src/models/: mod.rs
so_utils/src/pages/: mod.rs
tg-report/: .gitignore  Cargo.toml  readme.md
tg-report/ps/: ExecutionPolicy.ps1  screenshot.ps1  send.ps1
tg-report/src/: main.rs
yew-template/: create.sh  index.html  index.scss
