[package]
name = "tg-report"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
serde = "1.0.217"
serde_json = "1.0.138"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
